Fix image vert align on about page

--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -5,7 +5,7 @@
   figure {
     margin-top: 40px;
     @include mq($from: tablet) {
-      height: 269px;
+      height: 287px;
       float: left;
     }
     img {
